[package]
name = "tysauni"
version = "0.1.0-beta.2"
authors = ["reoh"]
description = "!!! THIS IS NOT STABLE !!! Tysauni is a simple lib for implementing multible types under a single type called a Register"
license = "MIT"

[dependencies]
syn = "2.0.66"
quote = "1.0"
proc-macro2 = "1.0"

[lib]
proc-macro = true